image radius change

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     </h1>
     <div class="container">
         <div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -126,7 +126,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -147,13 +147,13 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
                 <h3 class="character-description--name"></h3>
                     <div class="character-description--status-species">
-                        <p class="character-description--status-species__color">●</p>
+                    <p class="character-description--status-species__color">●</p>
                     <p class="character-description--status-species__status"></p>
                     <p class="character-description--status-species__line">-</p>
                     <p class="character-description--status-species__species"></p>
@@ -168,7 +168,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -189,7 +189,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -210,7 +210,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -231,7 +231,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -252,7 +252,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -273,7 +273,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -294,7 +294,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -315,7 +315,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -336,7 +336,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -357,7 +357,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -378,7 +378,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -399,7 +399,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
@@ -421,7 +421,7 @@
                 </div>
             </div>
         </div><div class="one-character">
-            <div class="charahter-image">
+            <div class="character-image">
                 <img src=""  class="character-image__img" alt="image">
             </div>
             <div class="character-description">
